# CubeSolverCpp

./: .gitignore  CMakeLists.txt  README.md  cube-solver-proj.sublime-project  cube-solver-proj.sublime-workspace
.cache/clangd/index/: main.cpp.9703B787FEB9B74D.idx
include/: Cube.hpp  CubeSolver.hpp  Timer.hpp
src/: CfopSolver.cpp  Cube.cpp  main.cpp
tests/: CMakeLists.txt  CubeStateTests.test.cpp
